--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ protobuf==5.29.3
 pyarrow==19.0.1
 pydeck==0.9.1
 Pygments==2.19.1
+pyperclip==1.9.0
 python-dateutil==2.9.0.post0
 python-Levenshtein==0.26.1
 pytz==2025.1
